Bai - Fixed content overflow on mobile

--- a/src/components/css/Bai.css
+++ b/src/components/css/Bai.css
@@ -3,11 +3,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10%;
+    padding: 2rem;
 }
 
 .Bai * {
     margin-top: 5px;
+}
+
+.Bai .about {
+    display: flex;
+    flex-direction: column;
 }
 
 .Bai h1 {
